--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,7 +25,7 @@
 #   unused-packages = true
 
 
-ignored = ["github.com/hajimehoshi/ebiten"]
+ignored = ["github.com/hajimehoshi/ebiten", "github.com/kyeett/ebitendrawutil"]
 
 [[constraint]]
   branch = "master"
@@ -35,9 +35,9 @@ ignored = ["github.com/hajimehoshi/ebiten"]
 #   name = "github.com/hajimehoshi/ebiten"
 #   version = "1.9.3"
 
-[[constraint]]
-  branch = "master"
-  name = "github.com/kyeett/ebitendrawutil"
+# [[constraint]]
+#   branch = "master"
+#   name = "github.com/kyeett/ebitendrawutil"
 
 [[constraint]]
   branch = "master"
